images overflow bug

--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ hr {
 
   #welcome-image,
   #mission-image {
+    display: block;
     flex-basis: 80%;
     padding: 16px;
   }
